client/public/css/main.css
.map-thumbs {
  width:100%;
  height: 250px;
  border: 1px solid #333335;
}
.thumbnail h3 {
  font-size: 1.25em;
}
.hero-feature .caption {
  min-height: 140px;
}
.container {
  display: block;
}
.thumb {
  padding: 1%;
  /*border: 1px solid #000;*/
  height: 250px;
}
.thumb-polyline {
  display: block;
  height: 200px;
  border: 1px solid #000;
  -webkit-box-shadow: 0px 4px 34px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 4px 34px 2px rgba(0,0,0,0.75);
          box-shadow: 0px 4px 34px 2px rgba(0,0,0,0.75);
}
.thumb-data-left {
  height: 30px;
  display: inline;
  width: 90%;
  float: left;
  border: 1px solid #000;
}
.thumb-data-right {
  height: 30px;
  display: inline;
  width: 10%;
  float: right;
  border: 1px solid #000;
}

